--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,24 +10,25 @@
         android:label="Login">
         <action
             android:id="@+id/action_login_to_dashboard"
-            app:destination="@id/dashboardFragment" />
+            app:destination="@id/dashboardFragment">
+            <argument
+                android:name="keypass"
+                app:argType="string" />
+        </action>
     </fragment>
 
     <fragment
         android:id="@+id/dashboardFragment"
         android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
         android:label="Dashboard">
-
-        <!-- If you want to pass keypass to DashboardFragment -->
         <argument
             android:name="keypass"
-            app:argType="string"
-            app:nullable="true" />
-
+            app:argType="string" />
         <action
             android:id="@+id/action_dashboardFragment_to_detailsFragment"
             app:destination="@id/detailsFragment" />
     </fragment>
+
 
     <fragment
         android:id="@+id/detailsFragment"
@@ -35,8 +36,7 @@
         android:label="Details">
         <argument
             android:name="entity"
-            app:argType="com.example.myapplication.model.Entity"
-            app:nullable="false" />
+            app:argType="com.example.myapplication.model.Entity" />
     </fragment>
 
 </navigation>
