--- a/app/src/main/res/layout/item_entity.xml
+++ b/app/src/main/res/layout/item_entity.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/property1Text"
+            android:id="@+id/exerciseNameEntity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Property 1"
@@ -24,7 +24,31 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/property2Text"
+            android:id="@+id/muscleGroupEntity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Property 2"
+            android:textColor="#333333"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/equipmentEntity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Property 2"
+            android:textColor="#333333"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/difficultyEntity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Property 2"
+            android:textColor="#333333"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/caloriesBurnedPerHourEntity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Property 2"
