--- a/app/src/main/res/layout/item_entity.xml
+++ b/app/src/main/res/layout/item_entity.xml
@@ -9,50 +9,10 @@
     app:cardCornerRadius="8dp">
 
     <LinearLayout
+        android:id="@+id/dynamicFieldsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp"/>
 
-        <TextView
-            android:id="@+id/exerciseNameEntity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Property 1"
-            android:textStyle="bold"
-            android:textColor="#000000"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/muscleGroupEntity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Property 3"
-            android:textColor="#333333"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/equipmentEntity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Property 4"
-            android:textColor="#333333"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/difficultyEntity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Property 5"
-            android:textColor="#333333"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/caloriesBurnedPerHourEntity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Property 6"
-            android:textColor="#333333"
-            android:textSize="14sp" />
-    </LinearLayout>
 </androidx.cardview.widget.CardView>
